Battle logic and math, new components, updates

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=https://pokeapi.co/api/v2/
-REACT_APP_POKEMON_COUNT=1279
+REACT_APP_POKEMON_COUNT=151
+# REACT_APP_POKEMON_COUNT=1279 
